# Android-AddImageWatermarkToVideo

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mt/mediacodec2demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myheader.h  native-lib.cpp
app/src/main/cpp/jpeg/: jconfigint.h
app/src/main/cpp/libyuv/: compare_row.h  convert.h  convert_argb.h  convert_from.h  convert_from_argb.h  cpu_id.h  mjpeg_decoder.h  planar_functions.h  rotate.h  rotate_row.h  row.h  scale.h  scale_rgb.h  scale_row.h  scale_uv.h  video_common.h
app/src/main/java/com/mt/mediacodec2demo/: INativeCallback.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mt/mediacodec2demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
